--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,12 +6,17 @@ Description: .
 License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.2),
+    DT,
     golem (>= 0.4.1),
     shiny (>= 1.9.1)
 Suggests:
     devtools,
     usethis,
-    styler
+    styler,
+    testthat (>= 3.0.0),
+    spelling
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Config/testthat/edition: 3
+Language: en-US
