--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,19 @@
 
 export(run_app)
 import(shiny)
+import(shinydashboard)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
+importFrom(shiny,tagList)
