--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,10 +22,11 @@ jobs:
         with:
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::lintr, local::.
-          needs: lint
+      - uses: r-lib/actions/setup-renv@v2
+
+      - name: Install lintr
+        run: install.packages("lintr")
+        shell: Rscript {0}
 
       - name: Lint
         run: lintr::lint_package()
