--- a/.github/workflows/pr-commands.yaml
+++ b/.github/workflows/pr-commands.yaml
@@ -28,10 +28,11 @@ jobs:
         with:
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::roxygen2
-          needs: pr-document
+      - uses: r-lib/actions/setup-renv@v2
+
+      - name: Install roxygen2
+        run: install.packages("roxygen2")
+        shell: Rscript {0}
 
       - name: Document
         run: roxygen2::roxygenise()
