--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -29,7 +29,9 @@ jobs:
         shell: Rscript {0}
 
       - name: Lint
-        run: lintr::lint_package()
+        run: |
+          pkgload::load_all()
+          lintr::lint_package()
         shell: Rscript {0}
         env:
           LINTR_ERROR_ON_LINT: true
