--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(run_app)
 import(bslib)
 import(shiny)
+importFrom(DBI,dbConnect)
+importFrom(duckdb,duckdb)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
@@ -10,6 +12,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
+importFrom(glue,glue)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
