--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Imports:
     shiny (>= 1.9.1),
     DBI,
     duckdb,
-    glue
+    glue,
+    tidyr,
+    withr
 Suggests:
     devtools,
     usethis,
