--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ importFrom(duckdb,duckdb)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
+importFrom(ggplot2,geom_col)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
+importFrom(ggplot2,labs)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
