--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ Imports:
     duckdb,
     glue,
     tidyr,
-    withr
+    withr,
+    lubridate,
+    dplyr
 Suggests:
     devtools,
     usethis,
@@ -24,7 +26,6 @@ Suggests:
     spelling,
     here,
     CDMConnector,
-    lubridate,
     lintr
 Encoding: UTF-8
 LazyData: true
