Rename references to old github organisation

--- a/.github/ISSUE_TEMPLATE/story.yml
+++ b/.github/ISSUE_TEMPLATE/story.yml
@@ -1,6 +1,6 @@
 name: New story
 description: Create a new story or task
-# projects: [ "UCLH-Foundry/13" ]
+# projects: [ "SAFEHR-data/13" ]
 body:
   - type: markdown
     attributes:
