--- a/deploy/Dockerfile.base
+++ b/deploy/Dockerfile.base
@@ -1,9 +1,19 @@
-FROM rocker/verse:4.4.1
+FROM rocker/shiny-verse:4.4.1
+SHELL ["/bin/bash", "-o", "pipefail", "-e", "-u", "-x", "-c"]
 
-RUN apt-get update -y && apt-get install -y  make libicu-dev pandoc zlib1g-dev git libcurl4-openssl-dev libssl-dev libfontconfig1-dev libfreetype6-dev libfribidi-dev libharfbuzz-dev libjpeg-dev libpng-dev libtiff-dev libxml2-dev && rm -rf /var/lib/apt/lists/*
 RUN mkdir -p /usr/local/lib/R/etc/ /usr/lib/R/etc/
-RUN echo "options(renv.config.pak.enabled = FALSE, repos = c(CRAN = 'https://cran.rstudio.com/'), download.file.method = 'libcurl', Ncpus = 4)" | tee /usr/local/lib/R/etc/Rprofile.site | tee /usr/lib/R/etc/Rprofile.site
-RUN R -e 'install.packages("remotes")'
-RUN R -e 'remotes::install_version("renv", version = "1.0.7")'
-COPY renv.lock renv.lock
+
+# Set R options
+RUN echo "options(renv.config.pak.enabled = FALSE, repos = c(CRAN = 'https://cran.rstudio.com/'), download.file.method = 'libcurl', Ncpus = 4)" |\
+    tee /usr/local/lib/R/etc/Rprofile.site | \
+    tee /usr/lib/R/etc/Rprofile.site
+
+# Install renv
+RUN R -e 'install.packages("remotes")' && \
+    R -e 'remotes::install_version("renv", version = "1.0.7")'
+
+# Restore renv environment
+RUN mkdir /app
+WORKDIR /app
+COPY renv.lock.prod renv.lock
 RUN R -e 'renv::restore()'
