Specify possible values for envvar

--- a/deploy/.env.sample
+++ b/deploy/.env.sample
@@ -1,4 +1,4 @@
-GOLEM_CONFIG_ACTIVE=production
+GOLEM_CONFIG_ACTIVE=production  # production or dev
 CALYPSO_DATA_PATH=dev/test_db/eunomia
 CALYPSO_DB_NAME=synthea-allergies-10k
 CALYPSO_DB_OMOP_VERSION=5.3
