--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,17 @@ export(read_table_sorted)
 export(run_app)
 export(write_table)
 import(bslib)
-import(dplyr)
 import(shiny)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
+importFrom(dplyr,collect)
 importFrom(dplyr,everything)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,n_distinct)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
