--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,8 @@ Suggests:
     spelling,
     here,
     CDMConnector,
-    lintr
+    lintr,
+    dbplyr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
