--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Suggests:
     here,
     CDMConnector,
     lintr,
-    dbplyr
+    dbplyr,
+    RSQLite
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
