--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -2,14 +2,15 @@
 ^renv\.lock$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^data-raw$
 dev_history.R
-^dev$
 $run_dev.*
 ^.here$
 ^LICENSE\.md$
 ^\.github$
 ^\.lintr$
 ^\.renvignore$
+^data$
+^data-raw$
 ^deploy$
+^dev$
 ^scripts$
