--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Suggests:
     CDMConnector,
     lintr,
     dbplyr,
-    RSQLite
+    RSQLite,
+    nanoparquet
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
