--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(calculate_monthly_counts)
 export(calculate_summary_stats)
 export(connect_to_db)
-export(read_table_sorted)
+export(read_parquet_sorted)
 export(run_app)
 export(write_table)
 import(bslib)
