--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(write_table)
 import(bslib)
 import(shiny)
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,collect)
