--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     readr,
     lubridate,
     dplyr,
-    cli
+    cli,
+    nanoparquet
 Suggests:
     devtools,
     usethis,
@@ -31,8 +32,7 @@ Suggests:
     CDMConnector,
     lintr,
     dbplyr,
-    RSQLite,
-    nanoparquet
+    RSQLite
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
