--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,8 @@ Imports:
     readr,
     lubridate,
     dplyr,
-    cli
+    cli,
+    nanoparquet
 Suggests:
     devtools,
     usethis,
@@ -29,9 +30,12 @@ Suggests:
     spelling,
     here,
     CDMConnector,
-    lintr
+    lintr,
+    dbplyr,
+    RSQLite
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
 Config/testthat/edition: 3
 Language: en-US
+Roxygen: list(markdown = TRUE)
