--- a/deploy/docker-compose.test.yml
+++ b/deploy/docker-compose.test.yml
@@ -1,7 +1,7 @@
 services:
-  shiny:
+  calyspo_test:
     extends:
       file: docker-compose.yml
-      service: shiny
+      service: calypso
     volumes:
       - ../data/test_data:/etc/calypso/data
