Set `concurrency` settings for CI workflows

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,6 +10,11 @@ name: lint.yaml
 
 permissions: read-all
 
+# Only run actions on the most recent push to a branch
+concurrency:
+  group: "${{ github.workflow }}-${{ github.head_ref }}"
+  cancel-in-progress: true
+
 jobs:
   lint:
     runs-on: ubuntu-latest
