Fix deployment setup to run on GAE (#59)
* Set `*_PROXY` variables to build container on GAE

* Simplify container setup; remove base image

* Update deploy docs

* Need to set proxies as build args as well

* Give docker services more unique names

* Add deploy instructions to launch test app

* Mention where the app is running on GAE

* Flesh out deployment docs

* Specify which GAE we're running on

Co-authored-by: Stef Piatek <s.piatek@ucl.ac.uk>

* Set `concurrency` settings for CI workflows

---------

Co-authored-by: Stef Piatek <s.piatek@ucl.ac.uk>

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,14 +1,20 @@
 services:
-  shiny:
-    build: .
+  calypso:
+    build:
+      context: .
+      args:
+        HTTP_PROXY: ${HTTP_PROXY}
+        HTTPS_PROXY: ${HTTPS_PROXY}
     image: calypso:latest
     platform: linux/amd64
     restart: unless-stopped
     environment:
-      - GOLEM_CONFIG_ACTIVE=production
-      - CALYPSO_DATA_PATH=/etc/calypso/data
-      - LOW_FREQUENCY_THRESHOLD=5
-      - LOW_FREQUENCY_REPLACEMENT=2.5
+      HTTP_PROXY: ${HTTP_PROXY}
+      HTTPS_PROXY: ${HTTPS_PROXY}
+      GOLEM_CONFIG_ACTIVE: production
+      CALYPSO_DATA_PATH: /etc/calypso/data
+      LOW_FREQUENCY_THRESHOLD: 5
+      LOW_FREQUENCY_REPLACEMENT: 2.5
     volumes:
       - ../data/prod_data:/etc/calypso/data
     ports:
