--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports:
     dplyr,
     cli,
     nanoparquet,
-    rlang
+    rlang,
+    omopbundles (>= 0.1.0)
 Suggests:
     devtools,
     usethis,
@@ -42,6 +43,7 @@ Suggests:
     lintr,
     dbplyr,
     RSQLite
+Remotes: SAFEHR-data/omop-bundles
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
