Replace all instances of `calypso` with `omopcat`

--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,21 +1,21 @@
 services:
-  calypso:
+  omopcat:
     build:
       context: .
       args:
         HTTP_PROXY: ${HTTP_PROXY}
         HTTPS_PROXY: ${HTTPS_PROXY}
-    image: calypso:latest
+    image: omopcat:latest
     platform: linux/amd64
     restart: unless-stopped
     environment:
       HTTP_PROXY: ${HTTP_PROXY}
       HTTPS_PROXY: ${HTTPS_PROXY}
       GOLEM_CONFIG_ACTIVE: production
-      CALYPSO_DATA_PATH: /etc/calypso/data
+      CALYPSO_DATA_PATH: /etc/omopcat/data
       LOW_FREQUENCY_THRESHOLD: 5
       LOW_FREQUENCY_REPLACEMENT: 2.5
     volumes:
-      - ../data/prod_data:/etc/calypso/data
+      - ../data/prod_data:/etc/omopcat/data
     ports:
       - 3838:3838
