--- a/deploy/docker-compose.test.yml
+++ b/deploy/docker-compose.test.yml
@@ -2,6 +2,6 @@ services:
   calyspo_test:
     extends:
       file: docker-compose.yml
-      service: calypso
+      service: omopcat
     volumes:
-      - ../data/test_data:/etc/calypso/data
+      - ../data/test_data:/etc/omopcat/data
