--- a/renv/settings.json
+++ b/renv/settings.json
@@ -2,7 +2,7 @@
   "bioconductor.version": null,
   "external.libraries": [],
   "ignored.packages": [
-    "calypso"
+    "omopcat"
   ],
   "package.dependency.fields": [
     "Imports",
