--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -23,10 +23,11 @@ jobs:
         with:
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: any::covr, any::xml2
-          needs: coverage
+      - uses: r-lib/actions/setup-renv@v2
+
+      - name: Install dependencies
+        run: install.packages("covr", "xml2")
+        shell: Rscript {0}
 
       - name: Test coverage
         run: |
