--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ export(run_app)
 export(write_table)
 import(bslib)
 import(shiny)
+importFrom(bslib,card)
+importFrom(bslib,layout_columns)
+importFrom(bslib,page_fluid)
 importFrom(dplyr,across)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
@@ -40,5 +43,8 @@ importFrom(golem,with_golem_options)
 importFrom(rlang,.data)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
+importFrom(shiny,span)
+importFrom(shiny,tableOutput)
 importFrom(shiny,tagList)
+importFrom(shiny,textOutput)
 importFrom(stats,sd)
