Get started on user manual

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(write_table)
 import(bslib)
 import(shiny)
 importFrom(bslib,card)
+importFrom(bslib,card_header)
 importFrom(bslib,layout_columns)
 importFrom(bslib,page_fluid)
 importFrom(dplyr,across)
