--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,8 @@ repos:
       # codemeta must be above use-tidy-description when both are used
       # -   id: codemeta-description-updated
       - id: use-tidy-description
-      - id: lintr
+      # - id: lintr  # disabling lintr hook as it doesn't seem to correctly load the package
+      # see also https://github.com/lorenzwalthert/precommit/issues/440
       - id: parsable-R
       - id: no-browser-statement
       - id: no-print-statement
