--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(htmltools,includeMarkdown)
 importFrom(rlang,.data)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
