--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ importFrom(ggplot2,geom_col)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(golem,activate_js)
