--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_col)
@@ -34,6 +35,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggtitle)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,theme)
+importFrom(ggplot2,vars)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(golem,activate_js)
