--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(read_parquet_sorted)
 export(run_app)
 export(write_table)
 import(bslib)
+import(ggplot2)
 import(shiny)
 importFrom(bslib,card)
 importFrom(bslib,layout_columns)
@@ -26,18 +27,6 @@ importFrom(dplyr,n_distinct)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
-importFrom(ggplot2,aes)
-importFrom(ggplot2,facet_wrap)
-importFrom(ggplot2,geom_bar)
-importFrom(ggplot2,geom_boxplot)
-importFrom(ggplot2,geom_col)
-importFrom(ggplot2,ggplot)
-importFrom(ggplot2,ggtitle)
-importFrom(ggplot2,labs)
-importFrom(ggplot2,theme)
-importFrom(ggplot2,vars)
-importFrom(ggplot2,xlab)
-importFrom(ggplot2,ylab)
 importFrom(golem,activate_js)
 importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
