--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports:
     rlang,
     omopbundles (>= 0.1.1),
     plotly (>= 4.10.4),
-    purrr
+    purrr,
+    htmltools
 Suggests:
     devtools,
     usethis,
