--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,7 +34,8 @@ Imports:
     omopbundles (>= 0.1.1),
     plotly (>= 4.10.4),
     purrr,
-    htmltools
+    htmltools,
+    markdown
 Suggests:
     devtools,
     usethis,
@@ -46,8 +47,7 @@ Suggests:
     lintr,
     dbplyr,
     RSQLite,
-    precommit,
-    markdown
+    precommit
 Remotes: SAFEHR-data/omop-bundles
 Encoding: UTF-8
 LazyData: true
