Add user manual (#71)
* Disable precommit lintr hook

It's not loading the package correctly and giving a bunch of false
positive errors.

* Get started on user manual

* start help tab content

* add help text

* placate linter

* add htmltools dependency

* move markdown to Imports to try to fix test fail

* renv::snapshot(dev = TRUE)

* Update .pre-commit-config.yaml

Co-authored-by: Milan Malfait <38256462+milanmlft@users.noreply.github.com>

* Update inst/app/www/help_tab.md

Co-authored-by: Milan Malfait <38256462+milanmlft@users.noreply.github.com>

* correct about concepts selection

* Update renv

---------

Co-authored-by: South <Andrew.South@UCLH201.NET>
Co-authored-by: Andy South <southandy@gmail.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,9 @@ Imports:
     rlang,
     omopbundles (>= 0.1.1),
     plotly (>= 4.10.4),
-    purrr
+    purrr,
+    htmltools,
+    markdown
 Suggests:
     devtools,
     usethis,
