--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ import(bslib)
 import(ggplot2)
 import(shiny)
 importFrom(bslib,card)
+importFrom(bslib,card_header)
 importFrom(bslib,layout_columns)
 importFrom(bslib,page_fluid)
 importFrom(dplyr,across)
@@ -32,6 +33,7 @@ importFrom(golem,add_resource_path)
 importFrom(golem,bundle_resources)
 importFrom(golem,favicon)
 importFrom(golem,with_golem_options)
+importFrom(htmltools,includeMarkdown)
 importFrom(rlang,.data)
 importFrom(shiny,NS)
 importFrom(shiny,shinyApp)
