--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,6 +39,7 @@ repos:
       - id: no-print-statement
       - id: no-debug-statement
       - id: deps-in-desc
+        exclude: ^scripts/
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
