--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -11,8 +11,14 @@ COPY omopcat_*.tar.gz /app.tar.gz
 RUN R -e 'remotes::install_local("/app.tar.gz", upgrade="never")' && \
     rm /app.tar.gz
 
+# Run pre-processing script when input data is missing
+COPY ../scripts ./scripts
+RUN if [ ! -f "${OMOPCAT_DATA_PATH}/omopcat_concepts.parquet"]; \
+    then echo "Running prod_data pre-processing" && R scripts/create_prod_data.R; \
+    fi;
+
 EXPOSE 3838
 CMD ["R", "-e", "options('shiny.port'=3838,shiny.host='0.0.0.0');library(omopcat);omopcat::run_app()"]
 
-# to build: docker build -t omopcat .
+# to build: docker build --platform=linux/amd64 -t omopcat .
 # to run: docker run -p 3838:3838 omopcat
