--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -1,7 +1,9 @@
 services:
   omopcat:
     build:
-      context: .
+      # Use repo root as context so we can copy scripts directory to container
+      context: ..
+      dockerfile: deploy/Dockerfile
       args:
         HTTP_PROXY: ${HTTP_PROXY}
         HTTPS_PROXY: ${HTTPS_PROXY}
