Move the low freq disclaimer to a tooltip icon and the help page
Saves some space on the Concepts dashboard page

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     plotly (>= 4.10.4),
     purrr,
     htmltools,
-    markdown
+    markdown,
+    bsicons
 Suggests:
     devtools,
     usethis,
