Record `RPostgres` as a dependency
Needed for prod data pre-processing

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,7 +35,8 @@ Imports:
     purrr,
     htmltools,
     markdown,
-    CDMConnector
+    CDMConnector,
+    RPostgres
 Suggests:
     devtools,
     usethis,
