Don't install dependencies during pkg install
These are handled by the `renv::restore()` before

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -11,7 +11,7 @@ RUN install2.r --error --skipinstalled renv && \
     R -e 'renv::restore(exclude = "omopbundles")'
 
 COPY deploy/omopcat_*.tar.gz /app.tar.gz
-RUN R -e 'remotes::install_local("/app.tar.gz", upgrade="never")' && \
+RUN R -e 'remotes::install_local("/app.tar.gz", upgrade="never", dependencies = FALSE)' && \
     rm /app.tar.gz
 
 ARG OMOPCAT_DATA_PATH
