Run pre-processing in during entrypoint command
Check for existing data in pre-processing script.
It's gross, but writing to a volume during build `RUN` steps does not
persist changes.

--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -16,15 +16,16 @@ RUN R -e 'remotes::install_local("/app.tar.gz", upgrade="never", dependencies = 
 
 ARG OMOPCAT_DATA_PATH
 
-# Run pre-processing script when input data is missing
 ADD scripts ./scripts
 COPY deploy/.Renviron .Renviron
-RUN if [ ! -f "${OMOPCAT_DATA_PATH}/omopcat_concepts.parquet" ]; then \
-    R -e 'source("scripts/create_prod_data.R")' || exit 1; \
-    fi;
+RUN R -e '' || exit 1
 
 EXPOSE 3838
-CMD ["R", "-e", "options('shiny.port'=3838,shiny.host='0.0.0.0');omopcat::run_app()"]
+CMD ["R", "-e", \
+    "options('shiny.port'=3838,shiny.host='0.0.0.0');" \
+    "source('scripts/create_prod_data.R');" \
+    "omopcat::run_app()" \
+    ]
 
 # to build: docker build -f deploy/Dockerfile --platform=linux/amd64 -t omopcat .
 # to run: docker run -p 3838:3838 omopcat
