--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches: ["main"]
     paths: ["deploy/**"]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,6 +15,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Add dummy .Renviron file
+        run: touch deploy/.Renviron
       - name: Build the Docker image
         run: docker compose build
         working-directory: deploy/
