--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,8 @@ repos:
           - rlang
           - SAFEHR-data/omop-bundles
           - plotly
+          - markdown
+          - CDMConnector
       # codemeta must be above use-tidy-description when both are used
       # -   id: codemeta-description-updated
       - id: use-tidy-description
@@ -38,6 +40,7 @@ repos:
       - id: no-print-statement
       - id: no-debug-statement
       - id: deps-in-desc
+        exclude: ^scripts/
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
