--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 export(calculate_monthly_counts)
 export(calculate_summary_stats)
 export(connect_to_db)
+export(connect_to_test_duckdb)
+export(process_monthly_counts)
+export(process_summary_stats)
+export(query_concepts_table)
 export(read_parquet_sorted)
 export(run_app)
 export(write_table)
