Couple of UI improvements (#88)
* Move the date-range selection to top of sidebar and switch back to a slider input (after playing around with it more I think this is much more intuitive and requires fewer mouse clicks to get a specific date range)
* Some brushing up of the export tab
* Add a preview table of the data that will be exported in the export tab
* Move the low-frequency disclaimer into a tooltip icon inside the concepts table header, which pops up if you hover it with the mouse, making it less intrusive
	* This saves some space in the dashboard page, leaving more space to display data
	* The intrusive version of the disclaimer is still displayed in the help tab
* Make colnames of the concepts table shorter again and remove the `mean_records_per_person` (closes #85)
* Make the datatable header and footer sticky and the content scrollable
* Make sure the plot elements can't shrink below  minimum size (which would otherwise result in errors when making the window smaller) and  make it possible to expand them to full screen (quite a neat feature from `bslib`)

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -29,6 +29,7 @@ repos:
           - SAFEHR-data/omop-bundles
           - plotly
           - markdown
+          - bsicons
           - CDMConnector
       # codemeta must be above use-tidy-description when both are used
       # -   id: codemeta-description-updated
