docs: Rename repo `omop-data-catalogue` -> `omopcat`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,5 +57,5 @@ RoxygenNote: 7.3.2
 Config/testthat/edition: 3
 Language: en-US
 Roxygen: list(markdown = TRUE)
-URL: https://github.com/SAFEHR-data/omop-data-catalogue
-BugReports: https://github.com/SAFEHR-data/omop-data-catalogue/issues
+URL: https://github.com/SAFEHR-data/omopcat
+BugReports: https://github.com/SAFEHR-data/omopcat/issues
