--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       # Use repo root as context so we can copy scripts directory to container
       context: .
-      dockerfile: deploy/Dockerfile
+      dockerfile: app/Dockerfile
       args:
         HTTP_PROXY: ${HTTP_PROXY}
         HTTPS_PROXY: ${HTTPS_PROXY}
