Configure `preprocess` server in docker compose

--- a/preprocessing/Dockerfile
+++ b/preprocessing/Dockerfile
@@ -3,7 +3,7 @@ FROM rocker/tidyverse:4.4.1
 WORKDIR /pkg
 ADD preprocessing .
 
-ENV OMOPCAT_DATA_PATH=${OMOPCAT_DATA_PATH}
+ENV PREPROCESS_OUT_PATH=${PREPROCESS_OUT_PATH}
 
 RUN R -e 'remotes::install_local(path = ".", dependencies = TRUE)'
 
