--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,41 @@
 services:
+  preprocess:
+    build:
+      context: .
+      dockerfile: preprocessing/Dockerfile
+      args:
+        # Required for running on GAE
+        HTTP_PROXY: ${HTTP_PROXY}
+        HTTPS_PROXY: ${HTTPS_PROXY}
+    image: omopcat_preprocessing:latest
+    platform: linux/amd64
+    environment:
+      ENV: ${ENV}
+      PREPROCESS_OUT_PATH: /etc/preprocessing/data
+      DB_NAME: ${PREPROCESS_DB_NAME}
+      HOST: ${PREPROCESS_HOST}
+      PORT: ${PREPROCESS_PORT}
+      DB_USERNAME: ${PREPROCESS_DB_USERNAME}
+      DB_PASSWORD: ${PREPROCESS_DB_PASSWORD}
+      DB_CDM_SCHEMA: main
+    command: ["R", "-e", "omopcat.preprocessing::preprocess()"]
+    volumes:
+      - ${DATA_VOLUME_PATH}:/etc/preprocessing/data
+
   omopcat:
     build:
       # Use repo root as context so we can copy scripts directory to container
       context: .
       dockerfile: app/Dockerfile
       args:
+        # Required for running on GAE
         HTTP_PROXY: ${HTTP_PROXY}
         HTTPS_PROXY: ${HTTPS_PROXY}
-        OMOPCAT_DATA_PATH: /etc/omopcat/data
     image: omopcat:latest
     platform: linux/amd64
     restart: unless-stopped
     environment:
+      ENV: ${ENV}
       HTTP_PROXY: ${HTTP_PROXY}
       HTTPS_PROXY: ${HTTPS_PROXY}
       GOLEM_CONFIG_ACTIVE: production
@@ -19,6 +43,6 @@ services:
       LOW_FREQUENCY_THRESHOLD: 5
       LOW_FREQUENCY_REPLACEMENT: 2.5
     volumes:
-      - ./data/prod_data:/etc/omopcat/data
+      - ${DATA_VOLUME_PATH}:/etc/omopcat/data
     ports:
       - 3838:3838
