--- a/preprocessing/DESCRIPTION
+++ b/preprocessing/DESCRIPTION
@@ -16,4 +16,8 @@ RoxygenNote: 7.3.2
 Imports:
     cli,
     fs,
-    rlang
+    rlang,
+    withr
+Suggests:
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
