--- a/preprocessing/NAMESPACE
+++ b/preprocessing/NAMESPACE
@@ -3,5 +3,12 @@
 export(preprocess)
 importFrom(dplyr,across)
 importFrom(dplyr,arrange)
+importFrom(dplyr,collect)
 importFrom(dplyr,everything)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,n_distinct)
+importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(rlang,.data)
