--- a/preprocessing/NAMESPACE
+++ b/preprocessing/NAMESPACE
@@ -2,13 +2,19 @@
 
 export(preprocess)
 importFrom(dplyr,across)
+importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
 importFrom(dplyr,collect)
+importFrom(dplyr,count)
 importFrom(dplyr,everything)
+importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
 importFrom(dplyr,n_distinct)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(rlang,.data)
+importFrom(stats,sd)
