--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,10 @@
 ENV=test
 DATA_VOLUME_PATH=./data/test_data
+
+
+# For preprocessing
+PREPROCESS_DB_NAME=         # name of the source database
+PREPROCESS_HOST=            # host address for the source database
+PREPROCESS_PORT=            # port on which to connect to the source database
+PREPROCESS_DB_USERNAME=     # username for the source database
+PREPROCESS_DB_PASSWORD=     # password for the source database
