Update `app/Dockerfile`; install `omopcat` from local source

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,21 +1,18 @@
 FROM rocker/shiny-verse:4.4.1
 
 WORKDIR /app
-COPY deploy/renv.lock.prod renv.lock
+ADD app .
 
 # Install renv and restore environment
 # omopbundles is installed separately as renv is giving problems
 # with GitHub packages
+RUN install2.r --error --skipinstalled renv remotes && \
+    R -e 'renv::restore(exclude = "omopbundles")' && \
+    rm -rf /tmp/downloaded_packages
 RUN R -e 'remotes::install_github("SAFEHR-data/omop-bundles")'
-RUN install2.r --error --skipinstalled renv && \
-    R -e 'renv::restore(exclude = "omopbundles")'
 
-COPY deploy/omopcat_*.tar.gz /app.tar.gz
-RUN R -e 'remotes::install_local("/app.tar.gz", upgrade="never", dependencies = FALSE)' && \
-    rm /app.tar.gz
+# Install the app
+RUN R -e 'remotes::install_local(".", dependencies = TRUE)'
 
 EXPOSE 3838
-CMD ["R", "-e", \
-    "options('shiny.port'=3838,shiny.host='0.0.0.0'); \
-    omopcat::run_app()" \
-    ]
+CMD ["R", "-e", "options('shiny.port'=3838, shiny.host='0.0.0.0'); omopcat::run_app()" ]
