--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -6,7 +6,7 @@ on:
   pull_request:
     branches: [main, master]
 
-name: lint.yaml
+name: lint
 
 permissions: read-all
 
@@ -33,10 +33,20 @@ jobs:
         run: install.packages("lintr")
         shell: Rscript {0}
 
-      - name: Lint
+      - name: Lint app
         run: |
           pkgload::load_all()
           lintr::lint_package()
         shell: Rscript {0}
+        working-directory: ./app
+        env:
+          LINTR_ERROR_ON_LINT: true
+
+      - name: Lint preprocessing
+        run: |
+          pkgload::load_all()
+          lintr::lint_package()
+        shell: Rscript {0}
+        working-directory: ./preprocessing
         env:
           LINTR_ERROR_ON_LINT: true
