--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -6,13 +6,17 @@ on:
   pull_request:
     branches: [main, master]
 
-name: test-coverage.yaml
+name: test-coverage
 
 permissions: read-all
 
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        package_dir: [app, preprocessing]
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
@@ -24,10 +28,13 @@ jobs:
           use-public-rspm: true
 
       - uses: r-lib/actions/setup-renv@v2
+        with:
+          working-directory: ${{ matrix.package_dir }}
 
       - name: Install dependencies
         run: install.packages("covr", "xml2")
         shell: Rscript {0}
+        working-directory: ${{ matrix.package_dir }}
 
       - name: Test coverage
         run: |
@@ -38,6 +45,7 @@ jobs:
           )
           covr::to_cobertura(cov)
         shell: Rscript {0}
+        working-directory: ${{ matrix.package_dir }}
 
       - uses: codecov/codecov-action@v4
         with:
@@ -46,6 +54,7 @@ jobs:
           plugin: noop
           disable_search: true
           token: ${{ secrets.CODECOV_TOKEN }}
+          directory: ${{ matrix.package_dir }}
 
       - name: Show testthat output
         if: always()
@@ -53,6 +62,7 @@ jobs:
           ## --------------------------------------------------------------------
           find '${{ runner.temp }}/package' -name 'testthat.Rout*' -exec cat '{}' \; || true
         shell: bash
+        working-directory: ${{ matrix.package_dir }}
 
       - name: Upload test results
         if: failure()
