--- a/codecov.yml
+++ b/codecov.yml
@@ -10,3 +10,14 @@ coverage:
         target: auto
         threshold: 1%
         informational: true
+
+component_management:
+  individual_components:
+    - component_id: app
+      name: app
+      paths:
+        - app/
+    - component_id: preprocessing
+      name: preprocessing
+      paths:
+        - preprocessing/
