Set the necessary envvars to build docker containers

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,12 @@
 ENV=test
 DATA_VOLUME_PATH=./data/test_data
 
-
 # For preprocessing
 PREPROCESS_DB_NAME=         # name of the source database
 PREPROCESS_HOST=            # host address for the source database
 PREPROCESS_PORT=            # port on which to connect to the source database
 PREPROCESS_DB_USERNAME=     # username for the source database
 PREPROCESS_DB_PASSWORD=     # password for the source database
+
+# For testing
+TEST_DB_PATH=./data-raw/test_db/eunomia
