--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,18 +11,18 @@ services:
     platform: linux/amd64
     environment:
       ENV: ${ENV}
-      PREPROCESS_OUT_PATH: /etc/preprocessing/data
+      PREPROCESS_OUT_PATH: /mnt/preprocessing/data
       DB_NAME: ${PREPROCESS_DB_NAME}
       HOST: ${PREPROCESS_HOST}
       PORT: ${PREPROCESS_PORT}
       DB_USERNAME: ${PREPROCESS_DB_USERNAME}
       DB_PASSWORD: ${PREPROCESS_DB_PASSWORD}
       DB_CDM_SCHEMA: ${PREPROCESS_DB_CDM_SCHEMA}
-      EUNOMIA_DATA_FOLDER: /etc/preprocessing/data-raw/test_db
+      EUNOMIA_DATA_FOLDER: /mnt/preprocessing/data-raw/test_db
     command: ["R", "-e", "omopcat.preprocessing::preprocess()"]
     volumes:
-      - ${DATA_VOLUME_PATH}:/etc/preprocessing/data
-      - ${TEST_DB_PATH}:/etc/preprocessing/data-raw/test_db
+      - ${DATA_VOLUME_PATH}:/mnt/preprocessing/data
+      - ${TEST_DB_PATH}:/mnt/preprocessing/data-raw/test_db
 
   omopcat:
     build:
