--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -54,7 +54,7 @@ jobs:
           plugin: noop
           disable_search: true
           token: ${{ secrets.CODECOV_TOKEN }}
-          directory: ${{ matrix.package_dir }}
+          working-directory: ${{ matrix.package_dir }}
 
       - name: Show testthat output
         if: always()
