Set low-freq replacement envvars in docker context

--- a/.env.sample
+++ b/.env.sample
@@ -8,5 +8,9 @@ PREPROCESS_PORT=            # port on which to connect to the source database
 PREPROCESS_DB_USERNAME=     # username for the source database
 PREPROCESS_DB_PASSWORD=     # password for the source database
 
+# Low-frequency replacement
+LOW_FREQUENCY_THRESHOLD=5
+LOW_FREQUENCY_REPLACEMENT=2.5
+
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
