--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       DB_PASSWORD: ${PREPROCESS_DB_PASSWORD}
       DB_CDM_SCHEMA: ${PREPROCESS_DB_CDM_SCHEMA}
       EUNOMIA_DATA_FOLDER: /mnt/preprocessing/data-raw/test_db
+      LOW_FREQUENCY_THRESHOLD: ${LOW_FREQUENCY_THRESHOLD}
+      LOW_FREQUENCY_REPLACEMENT: ${LOW_FREQUENCY_REPLACEMENT}
     command: ["R", "-e", "omopcat.preprocessing::preprocess()"]
     volumes:
       - ${DATA_VOLUME_PATH}:/mnt/preprocessing/data
@@ -42,8 +44,8 @@ services:
       HTTPS_PROXY: ${HTTPS_PROXY}
       GOLEM_CONFIG_ACTIVE: production
       OMOPCAT_DATA_PATH: /etc/omopcat/data
-      LOW_FREQUENCY_THRESHOLD: 5
-      LOW_FREQUENCY_REPLACEMENT: 2.5
+      LOW_FREQUENCY_THRESHOLD: ${LOW_FREQUENCY_THRESHOLD}
+      LOW_FREQUENCY_REPLACEMENT: ${LOW_FREQUENCY_REPLACEMENT}
     volumes:
       - ${DATA_VOLUME_PATH}:/etc/omopcat/data
     ports:
