fix: add missing envvar to `.env.sample`

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ PREPROCESS_HOST=            # host address for the source database
 PREPROCESS_PORT=            # port on which to connect to the source database
 PREPROCESS_DB_USERNAME=     # username for the source database
 PREPROCESS_DB_PASSWORD=     # password for the source database
+PREPROCESS_DB_CDM_SCHEMA=   # Schema name in the database to connect the OMOP CDM to 
 
 # Low-frequency replacement
 LOW_FREQUENCY_THRESHOLD=5
