feat: Move low-frequency replacement to pre-processing (#109)

--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,11 @@ PREPROCESS_HOST=            # host address for the source database
 PREPROCESS_PORT=            # port on which to connect to the source database
 PREPROCESS_DB_USERNAME=     # username for the source database
 PREPROCESS_DB_PASSWORD=     # password for the source database
+PREPROCESS_DB_CDM_SCHEMA=   # Schema name in the database to connect the OMOP CDM to 
+
+# Low-frequency replacement
+LOW_FREQUENCY_THRESHOLD=5
+LOW_FREQUENCY_REPLACEMENT=2.5
 
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
