Set up template for public version of app

--- a/public.env.sample
+++ b/public.env.sample
@@ -1,5 +1,5 @@
 ENV=test
-DATA_VOLUME_PATH=./data/test_data/internal
+DATA_VOLUME_PATH=./data/test_data/public
 
 # For preprocessing
 PREPROCESS_DB_NAME=         # name of the source database
@@ -10,8 +10,8 @@ PREPROCESS_DB_PASSWORD=     # password for the source database
 PREPROCESS_DB_CDM_SCHEMA=   # Schema name in the database to connect the OMOP CDM to 
 
 # Low-frequency replacement
-LOW_FREQUENCY_THRESHOLD=5
-LOW_FREQUENCY_REPLACEMENT=2.5
+LOW_FREQUENCY_THRESHOLD=10
+LOW_FREQUENCY_REPLACEMENT=5
 
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
