Make shiny port configurable, so we can run multiple instances

--- a/public.env.sample
+++ b/public.env.sample
@@ -1,6 +1,8 @@
 ENV=test
 DATA_VOLUME_PATH=./data/test_data/public
 
+SHINY_PORT: 3839
+
 # For preprocessing
 PREPROCESS_DB_NAME=         # name of the source database
 PREPROCESS_HOST=            # host address for the source database
