--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
 ENV=test
 DATA_VOLUME_PATH=./data/test_data/internal
 
+SHINY_PORT: 3838
+
 # For preprocessing
 PREPROCESS_DB_NAME=         # name of the source database
 PREPROCESS_HOST=            # host address for the source database
