Make summarisation level configurable

--- a/public.env.sample
+++ b/public.env.sample
@@ -15,5 +15,8 @@ PREPROCESS_DB_CDM_SCHEMA=   # Schema name in the database to connect the OMOP CD
 LOW_FREQUENCY_THRESHOLD=10
 LOW_FREQUENCY_REPLACEMENT=5
 
+# Level to summarise record counts at (monthly or quarterly)
+SUMMARISE_LEVEL=quarterly
+
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
