--- a/.env.sample
+++ b/.env.sample
@@ -15,5 +15,8 @@ PREPROCESS_DB_CDM_SCHEMA=   # Schema name in the database to connect the OMOP CD
 LOW_FREQUENCY_THRESHOLD=5
 LOW_FREQUENCY_REPLACEMENT=2.5
 
+# Level to summarise record counts at (monthly or quarterly)
+SUMMARISE_LEVEL=monthly
+
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
