--- a/.env.sample
+++ b/.env.sample
@@ -4,19 +4,17 @@ DATA_VOLUME_PATH=./data/test_data/internal
 SHINY_PORT: 3838
 
 # For preprocessing
-PREPROCESS_DB_NAME=         # name of the source database
-PREPROCESS_HOST=            # host address for the source database
-PREPROCESS_PORT=            # port on which to connect to the source database
-PREPROCESS_DB_USERNAME=     # username for the source database
-PREPROCESS_DB_PASSWORD=     # password for the source database
-PREPROCESS_DB_CDM_SCHEMA=   # Schema name in the database to connect the OMOP CDM to 
+PREPROCESS_DB_NAME=                 # name of the source database
+PREPROCESS_HOST=                    # host address for the source database
+PREPROCESS_PORT=                    # port on which to connect to the source database
+PREPROCESS_DB_USERNAME=             # username for the source database
+PREPROCESS_DB_PASSWORD=             # password for the source database
+PREPROCESS_DB_CDM_SCHEMA=           # Schema name in the database to connect the OMOP CDM to
+PREPROCESS_SUMMARISE_LEVEL=monthly  # Level to summarise record counts at (monthly or quarterly)
 
 # Low-frequency replacement
 LOW_FREQUENCY_THRESHOLD=5
 LOW_FREQUENCY_REPLACEMENT=2.5
-
-# Level to summarise record counts at (monthly or quarterly)
-SUMMARISE_LEVEL=monthly
 
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
