--- a/public.env.sample
+++ b/public.env.sample
@@ -1,7 +1,7 @@
 ENV=test
-DATA_VOLUME_PATH=./data/test_data/internal
+DATA_VOLUME_PATH=./data/test_data/public
 
-SHINY_PORT: 3838
+SHINY_PORT: 3839
 
 # For preprocessing
 PREPROCESS_DB_NAME=                 # name of the source database
@@ -10,11 +10,11 @@ PREPROCESS_PORT=                    # port on which to connect to the source dat
 PREPROCESS_DB_USERNAME=             # username for the source database
 PREPROCESS_DB_PASSWORD=             # password for the source database
 PREPROCESS_DB_CDM_SCHEMA=           # Schema name in the database to connect the OMOP CDM to
-PREPROCESS_SUMMARISE_LEVEL=monthly  # Level to summarise record counts at (monthly or quarterly)
+PREPROCESS_SUMMARISE_LEVEL=quarterly  # Level to summarise record counts at (monthly or quarterly)
 
 # Low-frequency replacement
-LOW_FREQUENCY_THRESHOLD=5
-LOW_FREQUENCY_REPLACEMENT=2.5
+LOW_FREQUENCY_THRESHOLD=10
+LOW_FREQUENCY_REPLACEMENT=5
 
 # For testing
 TEST_DB_PATH=./data-raw/test_db/eunomia
